анимация карточек состава

--- a/Team.html
+++ b/Team.html
@@ -62,7 +62,7 @@
             <div class="mpcardb2"></div>
             <img src="./img/H8l2UfRkVCw.jpg" class="mpcard2" alt="...">
             <div class="mpcard3">
-              <p>Мария<br>Романова<p>
+              <p>Мария<br>Романова<br><br>Председатель Молодёжного парламента Красноясркого края</p>
             </div>
           </a>
         </div>
@@ -81,7 +81,7 @@
             <div class="mpcardb2"></div>
             <img src="./img/WYNG4MqabX0.jpg" class="mpcard2" alt="...">
             <div class="mpcard3">
-              <p>Валерия<br>Ступина<p>
+              <p>Валерия<br>Ступина<br><br>Координатор Молодёжных парламентов СФО</p>
             </div>
           </a>
         </div>
@@ -100,7 +100,7 @@
             <div class="mpcardb2"></div>
             <img src="./img/perik.jpg" class="mpcard2" alt="...">
             <div class="mpcard3">
-              <p>Денис<br>Перик<p>
+              <p>Денис<br>Перик<br><br>Заместитель председателя по законо-творческой деятельности</p>
             </div>
           </a>
         </div>
@@ -109,7 +109,7 @@
             <div class="mpcardb2"></div>
             <img src="./img/kisterskii.jpg" class="mpcard2" alt="...">
             <div class="mpcard3">
-              <p>Константин<br>Кистерский<p>
+              <p>Константин<br>Кистерский<br><br>Заместитель председателя по внешним связям</p>
             </div>
           </a>
         </div>
@@ -118,7 +118,7 @@
             <div class="mpcardb2"></div>
             <img src="./img/ishutin.jpg" class="mpcard2" alt="...">
             <div class="mpcard3">
-              <p>Иван<br>Ишутин<p>
+              <p>Иван<br>Ишутин<br><br>Заместитель председателя по проектной деятельности</p>
             </div>
           </a>
         </div>
@@ -127,7 +127,7 @@
             <div class="mpcardb2"></div>
             <img src="./img/koval.jpg" class="mpcard2" alt="...">
             <div class="mpcard3">
-              <p>Денис<br>Коваль<p>
+              <p>Денис<br>Коваль<br><br>Заместитель председателя по делам Севера и коренных малочисленных народов</p>
             </div>
           </a>
         </div>
