--- a/Team.html
+++ b/Team.html
@@ -47,7 +47,7 @@
 </header>
 <main>
   <div class="container">
-    <br>
+    <br><br>
     <h1 class="text-center" >Действующий состав</h1>
     <br>
     <div class="row g-4">
@@ -146,7 +146,7 @@
             <div class="mpcardb2"></div>
             <img src="./img/Starodymova.jpg" class="mpcard2" alt="...">
             <div class="mpcard3">
-              <p>Арина<br>Стародумова<p>
+              <p>Арина<br>Стародумова</p><br><br>Председатель Юридической службы
             </div>
           </a>
         </div>
@@ -155,7 +155,7 @@
             <div class="mpcardb2"></div>
             <img src="./img/216A0506.jpg" class="mpcard2" alt="...">
             <div class="mpcard3">
-              <p>Алексей<br>Широков<p>
+              <p>Алексей<br>Широков</p><br><br>Заместитель председателя Юридической службы
             </div>
           </a>
         </div>
@@ -164,7 +164,7 @@
             <div class="mpcardb2"></div>
             <img src="./img/lasica.jpg" class="mpcard2" alt="...">
             <div class="mpcard3">
-              <p>Анастасия<br>Ласица<p>
+              <p>Анастасия<br>Ласица</p><br><br>Член Юридической службы
             </div>
           </a>
         </div>
@@ -183,7 +183,7 @@
            <div class="mpcardb2"></div>
              <img src="./img/kisterskii.jpg" class="mpcard2" alt="...">
            <div class="mpcard3">
-             <p>Константин<br>Кистерский<p>
+             <p>Константин<br>Кистерский</p><br><br>Председатель Комитета по государственному устройству, законодательству и местному самоуправлению
            </div>
          </a>
        </div>
@@ -192,7 +192,7 @@
           <div class="mpcardb2"></div>
             <img src="./img/216A0506.jpg" class="mpcard2" alt="...">
           <div class="mpcard3">
-            <p>Алексей<br>Широков<p>
+            <p>Алексей<br>Широков</p><br><br>Заместитель председателя Комитета по государственному устройству, законодательству и местному самоуправлению
           </div>
         </a>
       </div>
@@ -201,7 +201,7 @@
           <div class="mpcardb2"></div>
             <img src="./img/perik.jpg" class="mpcard2" alt="...">
           <div class="mpcard3">
-            <p>Денис<br>Перик<p>
+            <p>Денис<br>Перик</p><br><br>Член Комитета по государственному устройству, законодательству и местному самоуправлению
           </div>
         </a>
       </div>
@@ -210,7 +210,7 @@
           <div class="mpcardb2"></div>
             <img src="./img/Paramonova.png" class="mpcard2" alt="...">
           <div class="mpcard3">
-            <p>Яна<br>Парамонова<p>
+            <p>Яна<br>Парамонова</p><br><br>Член Комитета по государственному устройству, законодательству и местному самоуправлению
           </div>
         </a>
       </div>
