--- a/Person.html
+++ b/Person.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Главная страница</title>
+    <title>Персональная страница - Мария Романова</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <!-- Custom styles for this template -->
     <link href="./css/style.css" rel="stylesheet">
@@ -46,14 +46,60 @@
     </div>
   </nav>
 </header>
-<main>  <div class="otstup"></div>  <div class="otstup"></div>  <div class="otstup"></div>
+<main>
   <div class="container">
+    <br><br>
+    <h1 class="text-center" >Персональная страница</h1>
+    <br>
     <div class="row">
-      <div class="col-4">
-        <div class="fperson"></div>
-      </div>
-      <div class="col-8">
-        g
+      <div class="col">
+        <div class="fpers">
+          <div class="fpers1"></div>
+          <img src="./img/H8l2UfRkVCw.jpg" class="fpers2" alt=""> 
+        </div>
+        </div>
+      <div class="col">
+        <div class="infopers">
+          <div class="infopers1">
+            <div class="hinfopers">
+            <div class="hinfopers1">
+              <div class="hinfopers2">
+                <p>Мария<br> Романова</p>
+              </div>
+            </div>
+            </div>
+          </div>
+          <div class="bpers">
+            <div class="row">
+              <div class="col">
+                <a href="https://vk.com/marie_13"><img src="./icon/VK_black.svg"  class="icon" alt=""></a>
+              </div>
+              <div class="col">
+                <a href="https://t.me/mromanovaa"><img src="./icon/Telegram_black.svg" class="icon" alt=""></a>
+              </div>
+              <div class="col">
+                <a href="https://www.tiktok.com/@romanova_marie"><img src="./icon/TikTok_black.svg" class="icon" alt=""></a>
+              </div>
+              <div class="col">
+                <a href="mailto:mpkrk24@gmail.com"><img src="./icon/Mail.ru_black.svg" class="icon" alt=""></a>
+              </div>
+            </div>
+          </div>
+          <div class="tpers"><p>О себе</p></div>
+          <div class="tpers1"><p >Дата рождения: 21.09.1998</p></div>
+          <div class="tpers"><p>Образование</p></div>
+          <div class="tpers1"><p>- Сибирский государственный университет науки и технологий им. ак. М. Ф. Решетнева, специальность «Химическая технология» (бакалавриат, 2016-2020)</p>
+            <p>- Курс профессиональной переподготовки «Учитель химии: Преподавание химии в образовательной организации»</p>
+            <p>- Повышение квалификации «Ликвидация накопленного экологического ущерба для обеспечения экологической безопасности», Российский университет дружбы народов</p> 
+            <p>- Магистратура, Сибирский государственный университет науки и технологий им. ак. М. Ф. Решетнева, специальность «Химическая технология»</p></div>
+          <div class="tpers"><p>Трудовая деятельность</p></div>
+          <div class="tpers1"><p>2020-2021 - ИХХТ СО РАН, инженер</p>
+            <p>2022- по насто. вр. - КГАУ ЦМИ "Форум", специалист по работе с молодежью</p></div>
+          <div class="tpers"><p>Общественная деятельность</p></div>
+          <div class="tpers1"><p>С 2019 года - член Молодежного Парламента при Законодательном Собрании Красноярского края </p>
+            <p>С 2019 года - член Регионального штаба Красноярского регионального отделения Всероссийской общественной организации «Молодая Гвардия Единой России»</p></div>
+          </div>
+        </div>
       </div>
     </div>
     <!-- <br>
@@ -100,11 +146,10 @@
   <br>
 </main>  
 <footer>
-  <div class="container">
+  <div class="text-center">
   Молодёжный парламент, 2022г.
   </div>
 </footer>
-
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script> 
   </body>
 </html>
