--- a/About.html
+++ b/About.html
@@ -1,25 +1,10 @@
 <!doctype html>
 <html lang="ru">
   <head>
-    <!-- Yandex.Metrika counter -->
-<script type="text/javascript" >
-   (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
-   m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
-   (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
-
-   ym(89233406, "init", {
-        clickmap:true,
-        trackLinks:true,
-        accurateTrackBounce:true,
-        webvisor:true
-   });
-</script>
-<noscript><div><img src="https://mc.yandex.ru/watch/89233406" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
-<!-- /Yandex.Metrika counter -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>О нас</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <title>Персональная страница - Мария Романова</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <!-- Custom styles for this template -->
     <link href="./css/style.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -28,75 +13,120 @@
   </head>
   <body>
     
-    <header>
-      <nav class="navbar navbar-expand-lg navbar-dark Mycolor fixed-top">
-        <div class="container-fluid ">
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse text-center" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0 w-100">
-              <li class="nav-item">
-                <a class="nav-link My" href="./About.html">О нас</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link My" href="./Team.html">Состав</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link My" href="./Projects.html">Проекты</a>
-              </li>
-            </ul>
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0 w-100 justify-content-end">
-              <li class="nav-item">
-                <a class="nav-link My"  href="./Initiatives.html">Инициативы</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link My"  href="./Сontest.html">Конкурс</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link My"  href="./Сontacts.html">Контакты</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
-    </header>
-
+<header>
+  <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
+    <div class="container-fluid ">
+      <button class="navbar-toggler MyBar" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse text-center" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0 w-100">
+          <li class="nav-item">
+            <a class="nav-link MyBar" href="./About.html">О нас</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link MyBar" href="./Team.html">Состав</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link MyBar" href="./Projects.html">Проекты</a>
+          </li>
+        </ul>
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0 w-100 justify-content-end">
+          <li class="nav-item">
+            <a class="nav-link MyBar"  href="./Initiatives.html">Инициативы</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link MyBar"  href="./Сontest.html">Конкурс</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link MyBar"  href="./Сontacts.html">Контакты</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+</header>
 <main>
   <div class="container">
-    <br>
+    <br><br>
     <h1 class="text-center" >О нас</h1>
-    <hr>
-    <p>Молодежный парламент Красноярского края - коллегиальный совещательный орган при краевом Законодательном Собрании, представляющий интересы молодежи на региональном и федеральном уровнях.</p>
-    <p> Молодежный Парламент при Законодательном Собрании Красноярского края образован 30 октября 2008 года постановлением Законодательного Собрания Красноярского края № 7 – 2332П. На данный момент действует состав VII созыва Молодёжного Парламента. </p>
-    <p>  Основными задачами Молодежного парламента являются:</p>
-    <p class="My">  — разработка и внесение предложений, затрагивающих интересы молодежи и других категорий населения края, в органы государственной власти Красноярского края и органы местного самоуправления Красноярского края в порядке, предусмотренном законодательством Российской Федерации и законодательством Красноярского края; </p>
-    <p class="My">  — участие в подготовке нормативных правовых актов органов государственной власти края;</p>
-    <p class="My">  — взаимодействие и сотрудничество с государственными органами, политическими партиями, иными общественными объединениями, государственными и иными организациями;</p>
-    <p class="My">  — информирование депутатов Законодательного Собрания края, членов Правительства края, органов местного самоуправления и общественности о положении молодежи в крае, наиболее актуальных проблемах молодежи, деятельности молодежных организаций, деятельности Молодежного парламента;</p>
-    <p class="My">  — содействие повышению социальной активности молодежи, молодежных общественных объединений, обеспечение участия молодежи в социально-политической жизни Красноярского края;</p>
-    <p class="My">  — содействие формированию правовой культуры и правового сознания молодежи, содействие в реализации и защите гражданских, политических, экономических, социальных, культурных прав и свобод молодежи Красноярского края;</p>
-    <p class="My">  — поддержка разработки и реализации наиболее перспективных общественно значимых проектов, инициатив и программ социально-экономического развития Красноярского края;</p>
-    <p class="My"> — содействие в осуществлении информационно-аналитической, консультативной и иной деятельности, направленной на реализацию молодежной политики в крае.</p>
     <br>
-    <h1 class="text-center" >Структура</h1>
-    <hr>
-    <p class="">Молодёжный Парламент Красноярского края состоит из 52 человек,  которые образуют 10 комитетов, аппарат и 3 службы. Руководство организацией осуществляют Председатель Молодёжного Парламента, его заместители, руководитель аппарата и руководители служб и профильных комитетов.</p>
-    <h1 class="text-center " >Деятельность</h1>
-    <hr class="">
-    <p class="">Основные формы деятельности Молодёжного Парламента – реализация проектов регионального масштаба, посещение заседаний профильных комитетов, представление законопроектов. Среди наиболее известных проектов можно выделить следующие:</p>
-    <p class="My "> Дискуссионная площадка «Город говорит» </p>
-    <p class="My "> Всероссийский тест по истории Отечества </p>
-    <p class="My "> Молодёжный саммит </p>
-    <p class="My "> Молодежный экономический саммит </p>
-    <p class="My "> Молодёжная приёмная </p>
-    <p class="My "> Сибирская лига дебатов </p>
-    <p class="My "> Школа молодого парламентария </p> 
-    <br>
+    <div class="row">
+      <div class="col-md-4">
+        <div class="infopers1">
+          <div class="hinfopers">
+            <div class="hinfopers1">
+              <div class="hinfopers2">
+                <p>О НАС</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-8">
+        <div class="bckabout">
+          <p>Молодежный парламент Красноярского края - коллегиальный совещательный орган при краевом Законодательном Собрании, представляющий интересы молодежи на региональном и федеральном уровнях.</p>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="infopers1">
+          <div class="hinfopers">
+            <div class="hinfopers1">
+              <div class="hinfopers2">
+                <p>ДОКУМЕНТЫ</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-8">
+        <div class="bckabout">
+          <p> Молодежный Парламент при Законодательном Собрании Красноярского края образован 30 октября 2008 года постановлением Законодательного Собрания Красноярского края № 7 – 2332П. На данный момент действует состав VII созыва Молодёжного Парламента. 
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="infopers1">
+          <div class="hinfopers">
+            <div class="hinfopers1">
+              <div class="hinfopers2">
+                <p>ЗАДАЧИ</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-8">
+        <div class="bckabout">
+          <p>  — разработка и внесение предложений, затрагивающих интересы молодежи и других категорий населения края, в органы государственной власти Красноярского края и органы местного самоуправления Красноярского края в порядке, предусмотренном законодательством Российской Федерации и законодательством Красноярского края; </p>
+    <p>  — участие в подготовке нормативных правовых актов органов государственной власти края;</p>
+    <p>  — взаимодействие и сотрудничество с государственными органами, политическими партиями, иными общественными объединениями, государственными и иными организациями;</p>
+    <p>  — информирование депутатов Законодательного Собрания края, членов Правительства края, органов местного самоуправления и общественности о положении молодежи в крае, наиболее актуальных проблемах молодежи, деятельности молодежных организаций, деятельности Молодежного парламента;</p>
+    <p>  — содействие повышению социальной активности молодежи, молодежных общественных объединений, обеспечение участия молодежи в социально-политической жизни Красноярского края;</p>
+    <p>  — содействие формированию правовой культуры и правового сознания молодежи, содействие в реализации и защите гражданских, политических, экономических, социальных, культурных прав и свобод молодежи Красноярского края;</p>
+    <p>  — поддержка разработки и реализации наиболее перспективных общественно значимых проектов, инициатив и программ социально-экономического развития Красноярского края;</p>
+    <p> — содействие в осуществлении информационно-аналитической, консультативной и иной деятельности, направленной на реализацию молодежной политики в крае.</p>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="infopers1">
+          <div class="hinfopers">
+            <div class="hinfopers1">
+              <div class="hinfopers2">
+                <p>СТРУКТУРА</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-8">
+        <div class="bckabout"><p class="">Молодёжный Парламент Красноярского края состоит из 52 человек,  которые образуют 10 комитетов, аппарат и 3 службы. Руководство организацией осуществляют Председатель Молодёжного Парламента, его заместители, руководитель аппарата и руководители служб и профильных комитетов.</p></div>
+      </div>
+    </div>
+    </div> 
   </div>
 </main>  
 <footer>
-  <div class="container">
+  <div class="text-center">
   Молодёжный парламент, 2022г.
   </div>
 </footer>
