--- a/About.html
+++ b/About.html
@@ -119,7 +119,7 @@
         </div>
       </div>
       <div class="col-md-8">
-        <div class="bckabout"><p class="">Молодёжный Парламент Красноярского края состоит из 52 человек,  которые образуют 10 комитетов, аппарат и 3 службы. Руководство организацией осуществляют Председатель Молодёжного Парламента, его заместители, руководитель аппарата и руководители служб и профильных комитетов.</p></div>
+        <div class="bckabout"><p class="">Молодёжный Парламент Красноярского края состоит из 52 человек,  которые образуют 10 комитетов, аппарат и 2 службы. Руководство организацией осуществляют Председатель Молодёжного Парламента, его заместители, руководители служб и профильных комитетов.</p></div>
       </div>
     </div>
     </div> 
